Add scroll behavior and google sheets saving

--- a/css/index.css
+++ b/css/index.css
@@ -4,10 +4,27 @@
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+  /*Adds smooth scrolling instead of snapping to element*/
+}
+
 
 body {
   background: #080808;
   color: #ffff;
+}
+
+.get-started .btn3 {
+  /*----prob here------*/
+  position: flex;
+  margin-top: 0;
+  margin-left: 10%;
+
+  /* margin: 0 900px; */
+}
+.btn.btn3:hover {
+  color: #6ec683;
 }
 
 header {
@@ -37,6 +54,7 @@ nav ul li {
   display: inline-block;
   list-style: none;
   margin: 10px 20px;
+  
 }
 
 nav ul li a {
@@ -44,6 +62,12 @@ nav ul li a {
   text-decoration: none;
   font-size: 18px;
   position: relative;
+ 
+}
+
+#sidemenu{
+   scroll-behavior: smooth;
+
 }
 
 nav ul li a::after {
@@ -281,6 +305,123 @@ nav ul li a:hover::after {
 .contact-left p {
   margin-top: 30px;
 }
+.contact-left p i {
+  color: #6ec683;
+  margin-right: 15px;
+  font-size: 25px;
+}
+.social-icons {
+  margin-top: 30px;
+}
 .social-icons a {
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  display: inline-block;
   color: #fff;
+  transition: transform 0.5s;
+}
+.social-icons a:hover {
+  color: #6ec683;
+  transform: translateY(-5px);
+}
+.btn.btn2 {
+  display: inline-block;
+  background: #6ec683;
+}
+.btn.btn3 {
+  display: inline-block;
+  background: #161717;
+  outline-style: none;
+}
+.contact-right form {
+  width: 100%;
+}
+form input,
+form textarea {
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #fbfbfbfe;
+  padding: 15px;
+  margin: 15px 0;
+  color: #000000;
+  font-size: 18px;
+  border-radius: 6px;
+}
+form .btn2 {
+  padding: 14px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+/* ----------------------MEDIA QUERY-------- */
+
+nav .fa-solid {
+  display: none;
+}
+@media only screen and (max-width: 600px) {
+  #header {
+    background-image: url(../images/IMG_4330.JPG);
+  }
+  .header-text {
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1 {
+    font-size: 30px;
+  }
+  nav .fa-solid {
+    display: block;
+    font-size: 25px;
+  }
+  nav ul {
+    background: #6ec683;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fa-solid {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+  .sub-title {
+    font-size: 40px;
+  }
+  .about-col-1,
+  .about-col-2 {
+    flex-basis: 100%;
+  }
+  .about-col-1 {
+    margin-bottom: 30px;
+  }
+  .about-col-2 {
+    font-size: 14px;
+  }
+  .tab-links {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+  }
+
+}
+#msg{
+  color: #61b752;
+  margin-top: -40px;
+  display: block;
 }
