--- a/css/index.css
+++ b/css/index.css
@@ -4,10 +4,22 @@
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
+.hidden{
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+.show{
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
 html {
   scroll-behavior: smooth;
   /*Adds smooth scrolling instead of snapping to element*/
 }
+
 
 
 body {
@@ -239,7 +251,9 @@ nav ul li a:hover::after {
   border-radius: 10px;
   position: relative;
   overflow: hidden;
+  display: flex;
 }
+
 
 .project img {
   width: 100%;
@@ -276,6 +290,15 @@ nav ul li a:hover::after {
 
 .project:hover .layer {
   height: 100%;
+}
+.project:nth-child(1){
+   transition-delay: 200ms;
+}
+.project:nth-child(2){
+   transition-delay: 400ms;
+}
+.project:nth-child(3){
+   transition-delay: 600ms;
 }
 
 .btn {
